some name changes man!!!

--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="./src/assets/logo.png" />
+    <link rel="icon" type="image/x-icon" href="./src/assets/logo_1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Elevate360 Digital - Premium Digital Marketing Agency</title>
+    <title>
+      Zentroverse - Your Complete Digital Universe, Where Balance Meets
+      Innovation
+    </title>
     <meta
       name="description"
-      content="Transform your digital presence with Elevate360 Digital. Expert SEO, social media marketing, paid advertising, and brand design services that drive real results."
+      content="Transform your digital presence with Zentroverse. Expert SEO, social media marketing, paid advertising, and brand design services that drive real results."
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
